package lab09.Ex1_a;

enum User { OWNER, COMPANY }
